// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Option Matches snapshot when boolean prop "disabled" is set to: "false" 1`] = `
<ForwardRef(styled.div)
  disabled={false}
  onClick={[Function]}
  selected={true}
  size="small"
  tabIndex="0"
>
  <Tooltip
    customLabel=""
    hotkey=""
    label="jest-auto-snapshots String Fixture"
    opacity={1}
    position="bottom"
    verticalAlign="center"
  >
    <ForwardRef(styled.div)
      iconPosition="top"
    >
      <ForwardRef(styled.span)
        iconPosition="top"
        optionType="text"
      >
        jest-auto-snapshots String Fixture
      </ForwardRef(styled.span)>
    </ForwardRef(styled.div)>
  </Tooltip>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > Option Matches snapshot when boolean prop "selected" is set to: "false" 1`] = `
<ForwardRef(styled.div)
  disabled={true}
  onClick={[Function]}
  selected={false}
  size="small"
  tabIndex="0"
>
  <Tooltip
    customLabel=""
    hotkey=""
    label="jest-auto-snapshots String Fixture"
    opacity={1}
    position="bottom"
    verticalAlign="center"
  >
    <ForwardRef(styled.div)
      iconPosition="top"
    >
      <ForwardRef(styled.span)
        iconPosition="top"
        optionType="text"
      >
        jest-auto-snapshots String Fixture
      </ForwardRef(styled.span)>
    </ForwardRef(styled.div)>
  </Tooltip>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > Option Matches snapshot when passed all props 1`] = `
<ForwardRef(styled.div)
  disabled={true}
  onClick={[Function]}
  selected={true}
  size="small"
  tabIndex="0"
>
  <Tooltip
    customLabel=""
    hotkey=""
    label="jest-auto-snapshots String Fixture"
    opacity={1}
    position="bottom"
    verticalAlign="center"
  >
    <ForwardRef(styled.div)
      iconPosition="top"
    >
      <ForwardRef(styled.span)
        iconPosition="top"
        optionType="text"
      >
        jest-auto-snapshots String Fixture
      </ForwardRef(styled.span)>
    </ForwardRef(styled.div)>
  </Tooltip>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > Option Matches snapshot when passed only required props 1`] = `
<ForwardRef(styled.div)
  disabled={false}
  onClick={[Function]}
  selected={true}
  size="normal"
  tabIndex="0"
>
  <ForwardRef(styled.div)
    iconPosition="left"
  >
    <ForwardRef(styled.span)
      iconPosition="left"
      optionType="text"
    >
      jest-auto-snapshots String Fixture
    </ForwardRef(styled.span)>
  </ForwardRef(styled.div)>
</ForwardRef(styled.div)>
`;
